--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,34 +1,2 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: sans-serif;
-  padding-top: 10px;
-}
-
-h1, h2 {
-  text-align: center;
-}
-
-h1 {
-  font-size: 1.5em;
-  margin-bottom: 10px;
-}
-
-h2 {
-  font-size: 1.3em;
-  margin-bottom: 30px;
-}
-
-h2 span {
-  font-size: 80%;
-  font-style: italic;
-  color: slateblue;
-}
-
-.container {
-  padding: 15px;
-}
+@import "main.css";
+@import "online-report/online-report.css";
